cluster/extras/multi-juicer/addon/networkPolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: juiceshop
  namespace: juiceshop
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: juice-shop
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: juice-balancer
      ports:
        - port: 3000
  egress:
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: juice-balancer
      ports:
        - port: 3000
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: progress-watchdog
      ports:
        - port: 8080
    - to:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
